# practice_digtal_photogrammery

./: .gitignore  CMakeLists.txt  README.md
data/: work2.txt
doc/_book/: index.html  search_index.json
doc/_book/module/: index.html
doc/_book/module/absolute_orientation/: absolute_orientation_kernal.html  absolute_orientation_kernal_1.html  index.html
doc/_book/module/adjustment_solution/: adjustment_solution_kernal.html  index.html
doc/_book/module/dense_match/: index.html
practice_digtal_photogrammery/: CMakeLists.txt  absolute_orientation.h  adjustment_solution.h  dense_match.h  module_call.h  pdp.h
practice_digtal_photogrammery/absolute_orientation/: absolute_orientation_kernal.cpp  absolute_orientation_kernal.h  absolute_orientation_kernal_1.cpp  absolute_orientation_kernal_1.h
practice_digtal_photogrammery/adjustment_solution/: adjustment_solution_kernal.h
practice_digtal_photogrammery/dense_match/: sgbm.cpp  sgbm.h  sgm.cpp  sgm.h
practice_digtal_photogrammery/module_call/: module_call_kernal.h
test/: CMakeLists.txt  match_test.cpp  orientation_test.cpp
work/: CMakeLists.txt  match.cpp  orientation.cpp
